deploy/production/ar_prod-retired-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
spec:
  replicas: 0
